# airportsim

./: .gitignore  AirControlOutput.txt  AirportGraphics.ini  CMakeLists.txt  EngineTest.ini  README.md  airplane.cpp  airplane.h  airport.cpp  airport.h  gate.cpp  gate.h  input.xml  main.cpp  output.txt  runway.cpp  runway.h  tests.cpp
Contracts/: Airplane.txt  Runway.txt
Engine/: engine
src/: AirLeader.cpp  AirLeader.h  AirportSim.cpp  AirportSim.h  Exporter.cpp  Exporter.h  Taxipoint.cpp  Taxipoint.h  airplane.cpp  airplane.h  airport.cpp  airport.h  domaintests.cpp  importer.cpp  importer.h  inputtests.cpp  largeairplane.cpp  largeairplane.h  main.cpp  mediumairplane.cpp  mediumairplane.h  outputtests.cpp  runway.cpp  runway.h  smallairplane.cpp  smallairplane.h  tests.cpp  utils.cpp  utils.h
testInput/: Error.txt  inputillegal1.txt  inputillegal1.xml  inputillegal10.txt  inputillegal10.xml  inputillegal11.txt  inputillegal11.xml  inputillegal12.txt  inputillegal12.xml  inputillegal13.txt  inputillegal13.xml  inputillegal14.txt  inputillegal14.xml  inputillegal2.txt  inputillegal2.xml  inputillegal3.txt  inputillegal3.xml  inputillegal4.xml  inputillegal5.xml  inputillegal6.txt  inputillegal6.xml  inputillegal7.txt  inputillegal7.xml  inputillegal8.xml  inputillegal9.xml  inputlegal.xml  inputlegal1.xml  inputlegalcomplex.xml  inputlegalcomplex1.xml  inputlegalcomplex2.xml  inputlegalemergency.xml  inputsyntaxerror1.xml  inputsyntaxerror2.xml  inputsyntaxerror3.xml  inputsyntaxerror4.xml
testOutput/: airleadercomplexscenario2expected.txt  airleadercomplexscenarioexpected.txt  airleadersimplescenarioexpected.txt  complexscenario.txt  complexscenario1.txt  complexscenario1simpleoutput.txt  complexscenario2.txt  complexscenario2expected.txt  complexscenario3.txt  complexscenario3graphicalimpressionexpected.txt  complexscenario3simpleoutputexpected.txt  complexscenariographicalimpression.txt  simplescenario.txt  simplescenario1.txt  simplescenario2expected.txt  simplescenario3.txt  simplescenario3expected.txt  simplescenarioexpected.txt  simplescenariographicalimpression.txt
